use jinja2 to match template

--- a/templates/simple_with_algo.jinja2
+++ b/templates/simple_with_algo.jinja2
@@ -7,10 +7,10 @@
 \begin{document}
 \begin{algorithm}
     \caption{
-        %s
+        {{{algo_name}}}
     }
     \begin{algorithmic}[1]
-        %s
+        {{{algo_code}}}
     \end{algorithmic}
 \end{algorithm}
 \end{document}
