Refactor to support normal vectors rather than only SVG

--- a/templates/algo.jinja2
+++ b/templates/algo.jinja2
@@ -7,10 +7,10 @@
 \begin{document}
 \begin{algorithm}
     \caption{
-        {{{algo_name}}}
+        {{{name}}}
     }
     \begin{algorithmic}[1]
-        {{{algo_code}}}
+        {{{code}}}
     \end{algorithmic}
 \end{algorithm}
 \end{document}
